[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/KeyboardShortcuts.gd" type="Script" id=1]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=2]

[node name="Panel" type="Panel"]
margin_right = 248.0
margin_bottom = 160.0
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="KeyInfo" type="VBoxContainer" parent="."]
margin_left = 56.0
margin_top = 44.0
margin_right = 156.0
margin_bottom = 168.0
mouse_filter = 2
custom_constants/separation = 5

[node name="Keys" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 44.0
margin_right = 24.0
margin_bottom = 172.0
mouse_filter = 2
custom_constants/separation = 5

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
text = "KEYBOARD_SHORTCUTS"
align = 1
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Panel_mouse_exited"]
[connection signal="resized" from="Keys" to="." method="_on_Keys_resized"]
